<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/desc"
            android:inputType="textCapSentences"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/desc_text"/>
        <EditText
            android:id="@+id/amount"
            android:inputType="numberDecimal"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/amount_text"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="onAddExpenseClick"
            android:text="@string/add_expense_text"/>

    </LinearLayout>

</LinearLayout>