<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/item_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/overview_card"
            android:contentDescription="@string/adjust_goal_hint"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:clickable="true"
            android:onClick="onOverviewClick"
            android:longClickable="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/title"
                    android:text="@string/overview_text"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/goal"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/deposited"
                    android:gravity="center"
                    android:textColor="@color/darkred"
                    android:layout_gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="center"
                    android:background="#DADADA"
                    />

                <TextView
                    android:id="@+id/remaining"
                    android:gravity="center"
                    android:textColor="@color/darkgreen"
                    android:layout_gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/item_history"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                >

                <TextView
                    android:id="@+id/goal_history_title"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/deposit_history_text"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/deposit_history_placeholder"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:text="@string/no_deposits_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/goal_history_title"
                    android:layout_alignParentStart="true" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:scrollbars="vertical"
                    android:layout_below="@+id/goal_history_title"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
