<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#DADADA" />

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/budget_card"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:contentDescription="@string/adjust_budget_hint"
            android:clickable="true"
            android:longClickable="true"
            android:onClick="adjustBudget"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/budgeted"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                />

                <TextView
                    android:id="@+id/spent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/darkred"
                    android:layout_gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                 />

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="center"
                    android:background="#DADADA"
                />

                <TextView
                    android:id="@+id/remaining"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/darkgreen"
                    android:layout_gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/listView"
            android:background="#DADADA" />
        
        <Button
            android:id="@+id/item_placeholder"
            android:text="@string/no_items_text"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#90A4AE"
            android:clickable="true"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:scrollbars="vertical"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="180dp"/>

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add"
            android:clickable="true"
            android:longClickable="true"
            android:onClick="addLineItem"
            fab:fab_colorNormal="@color/darkred"
            fab:fab_colorPressed="@color/transparent_grey"
            fab:fab_colorRipple="@color/red" />

    </LinearLayout>
</RelativeLayout>
